added fuzzy search

--- a/src/custom.css
+++ b/src/custom.css
@@ -17,3 +17,22 @@ table{
   border-radius: 1ex;
   margin-top: 5%;
 }
+
+a.navbar-brand {
+  white-space: normal;
+  text-align: center;
+  word-break: break-all;
+}
+
+html {
+  font-size: 14px;
+}
+@media (min-width: 768px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+.box-shadow {
+  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
