--- a/src/custom.css
+++ b/src/custom.css
@@ -58,16 +58,23 @@ html {
 .loginForm
 {
   border-radius: 5%;
-  height:450px;
+  height:480px;
   padding: 5%;
   padding-top: 25%;
   padding-bottom: 25%;
   background-color: #FFFFFF;
   width: 400px;
-  height: 400px;
-  margin: 7em auto;
+  margin: auto;
   border-radius: 1.5em;
   box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+}
+
+.loader
+{
+  position: absolute;
+   color: White;
+  top: 50%;
+  left: 45%;
 }
 
 .submit {
@@ -112,5 +119,11 @@ html {
   margin-bottom: 27px;
   font-family: 'Ubuntu', sans-serif;
   }
+
+  .forgot {
+    text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+    color: #E1BEE7;
+    padding-top: 15px;
+}
   
 
