--- a/src/custom.css
+++ b/src/custom.css
@@ -75,6 +75,20 @@ html {
   box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
 
+.sr
+{
+  border-radius: 5%;
+  padding: 2%;
+  padding-top: 3%;
+  padding-bottom: 25%;
+  background-color: #FFFFFF;
+  margin: auto;
+  height: 800px;
+  margin-top: 5%;
+  border-radius: 1.5em;
+  box-shadow: 1px 11px 39px 3px rgba(0, 0, 0, 0.14);
+}
+
 .loader
 {
   position: absolute;
@@ -82,7 +96,7 @@ html {
   left: 50%;
 }
 
-.submit {
+.styledButton {
   cursor: pointer;
     border-radius: 5em;
     color: #fff;
@@ -138,6 +152,13 @@ html {
     text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
     color: #E1BEE7;
     padding-top: 15px;
+}
+
+.react-fuzzy-search{
+  border:none !important;
+  line-height: 0%;
+  padding: 0%;
+  
 }
 
 
