--- a/src/custom.css
+++ b/src/custom.css
@@ -5,7 +5,7 @@ a {
 
 body, html { 
   font-family: 'Ubuntu', sans-serif;
-  font-size: 18px;
+  font-size: 15px;
 
 }
 
@@ -126,6 +126,7 @@ html {
   font-size: 23px;
   text-align:center;
   margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .un {
@@ -160,7 +161,13 @@ html {
   padding: 0%;
   
 }
-
-
   
 
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+.navbar-brand > img {
+  padding: 1px 2px;
+  height: 50px;
+}
